# Speeddating

./: .gitignore  .pre-commit-config.yaml  .secrets.toml.example  CLAUDE.md  SUPER_USER_SETUP.md  fix_datetime_deprecation.py  main.py  pyproject.toml  settings.toml  test_config_validation.py  test_password_reset.py  test_security.py  test_simple_password_reset.py  test_validation.py  todo.md
app/: auth.py  config.py  database.py  database_utils.py  decorators.py  exceptions.py  logging_config.py  main.py  schemas.py  validators.py
app/api/: __init__.py  attendees.py  events.py  health.py  match_results.py  password_reset.py  profiles.py  qr_auth.py  rounds.py  super_user.py  templates.py  websockets.py
app/middleware/: __init__.py  error_handler.py  security.py
app/models/: __init__.py  attendee.py  event.py  match.py  password_reset.py  qr_login.py  round.py  user.py  validators.py
app/security/: __init__.py  csrf.py  input_sanitizer.py  super_user.py
app/services/: __init__.py  match_results_service.py  matching.py  notification_service.py  password_reset.py  pdf_service.py  qr_service.py  websocket_manager.py
app/static/: timer-demo.html
app/static/css/: tailwind.css
app/static/js/: app.js  htmx.min.js  websocket-client.js
app/templates/: base.html
app/templates/admin/: dashboard.html
app/templates/attendee/: dashboard.html
app/templates/auth/: forgot_password.html  login.html  reset_password.html
app/templates/components/: admin_stats.html
app/templates/events/: list.html
app/templates/public/: home.html
app/templates/setup/: super_user.html
app/utils/: __init__.py  content_filter.py  docs_config.py  settings_validator.py  validators.py
app/websocket/: __init__.py  connection_manager.py  round_timer.py
docs/: API_MODELS_GUIDE.md  DATABASE_SCHEMA.md  ER_DIAGRAM.md  MATCH_RESULTS.md  MODEL_TESTING.md  README.md  REALTIME_SYSTEM.md
scripts/: create_docs.py
tests/: __init__.py  conftest.py  conftest_full.py  conftest_simple.py
tests/e2e/: README.md  conftest.py  test_admin_dashboard.py  test_auth_flows.py  test_cross_browser.py  test_event_management.py  test_matching_system.py  test_realtime_features.py
tests/e2e/pages/: __init__.py  admin_pages.py  attendee_pages.py  auth_pages.py  base_page.py  public_pages.py
tests/fixtures/: faker_providers.py
tests/fuzzing/: __init__.py  test_database_fuzzing.py  test_validation_fuzzing.py
tests/integration/: test_attendees_endpoints.py  test_events_endpoints.py  test_health_endpoints.py  test_qr_auth_endpoints.py
tests/performance/: test_load_performance.py
tests/property/: __init__.py  test_matching_algorithm.py
tests/security/: test_authentication_security.py  test_password_security.py
tests/strategies/: __init__.py  api_strategies.py  core_strategies.py  validation_strategies.py
tests/unit/: test_matching_algorithm.py  test_models.py  test_simple.py  test_validators.py
tests/websocket/: __init__.py  test_countdown_functionality.py  test_websocket_functionality.py
